fixed: Working on Queue Abstract Class now
version 0.0.5