@@ -12,6 +12,8 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
+import static utils.AnimationHelper.insertNode;
+
 final class CycleDetectionVisual extends LinkedList{
     private final List<VisualNode> nodes = new ArrayList<>();
     private final MyArrow arrow = new MyArrow(80, 15);
@@ -26,11 +28,11 @@ final class CycleDetectionVisual extends LinkedList{
     private boolean detectionRunning = false;
     private String detectionResult = "";
     private String currentAlgorithm = "";
-    
+
     CycleDetectionVisual() {
         initializeSampleList();
     }
-    
+
     private void initializeSampleList() {
         nodes.clear();
         int startX = 150;
@@ -45,7 +47,7 @@ final class CycleDetectionVisual extends LinkedList{
         }
         resize();
     }
-    
+
     @Override
     protected void paintComponent(Graphics g1) {
         super.paintComponent(g1);
@@ -65,7 +67,7 @@ final class CycleDetectionVisual extends LinkedList{
             g.drawString("Algorithm: " + currentAlgorithm, width / 2 - 150, 90);
         }
     }
-    
+
     private void drawNodes(Graphics2D g) {
         // Draw connections first
         for (VisualNode node : nodes) {
@@ -84,7 +86,7 @@ final class CycleDetectionVisual extends LinkedList{
                 }
             }
         }
-        
+
         // Draw nodes
         for (VisualNode node : nodes) {
             drawNode(g, node);
@@ -106,7 +108,7 @@ final class CycleDetectionVisual extends LinkedList{
     public void drawNode(Graphics2D g, VisualNode node) {
         int x = node.xPos;
         int y = node.yPos;
-        
+
         // Determine color based on state
         Color nodeColor = new Color(0x1E3A8A);
         if (visitedNodes.contains(node)) {
@@ -121,58 +123,58 @@ final class CycleDetectionVisual extends LinkedList{
         if (node == slowPointer && node == fastPointer) {
             nodeColor = new Color(0xFF00FF); // Magenta when both meet
         }
-        
+
         // Draw shadow
         g.setColor(new Color(0, 0, 0, 50));
         g.fillRoundRect(x + 4, y + 4, nodeWidth, nodeHeight, 10, 10);
-        
+
         // Draw node
         g.setColor(nodeColor);
         g.fillRoundRect(x, y, nodeWidth, nodeHeight, 10, 10);
-        
+
         // Draw border
         g.setColor(new Color(0xFFD700));
         g.setStroke(new BasicStroke(3f));
         g.drawRoundRect(x, y, nodeWidth, nodeHeight, 10, 10);
-        
+
         // Draw data
         g.setFont(new Font(Font.SANS_SERIF, Font.BOLD, 32));
         g.setColor(Color.WHITE);
         String dataStr = String.valueOf(node.data);
         FontMetrics fm = g.getFontMetrics();
         g.drawString(dataStr, x + (nodeWidth - fm.stringWidth(dataStr)) / 2, y + nodeHeight / 2 + 10);
-        
+
         // Draw address
         g.setFont(new Font(Font.SANS_SERIF, Font.PLAIN, 10));
         g.setColor(Color.YELLOW);
         g.drawString(node.address.substring(0, Math.min(10, node.address.length())), x + 5, y - 5);
     }
-    
+
     private void drawCurvedArrow(Graphics2D g, int x1, int y1, int x2, int y2) {
         g.setColor(new Color(0xFF6600));
         g.setStroke(new BasicStroke(3f));
-        
+
         // Calculate control points for bezier curve
         int controlY = y1 - 100;
-        
+
         // Draw curved line
         for (float t = 0; t <= 1.0f; t += 0.01f) {
             int x = (int) ((1 - t) * (1 - t) * x1 + 2 * (1 - t) * t * ((x1 + x2) / 2) + t * t * x2);
             int y = (int) ((1 - t) * (1 - t) * y1 + 2 * (1 - t) * t * controlY + t * t * y2);
             g.fillRect(x, y, 3, 3);
         }
-        
+
         // Draw arrow head
         g.setColor(new Color(0xFF6600));
         int[] xPoints = {x2, x2 - 10, x2 - 10};
         int[] yPoints = {y2, y2 - 8, y2 + 8};
         g.fillPolygon(xPoints, yPoints, 3);
-        
+
         // Draw "CYCLE" label
         g.setFont(new Font(Font.SANS_SERIF, Font.BOLD, 16));
         g.drawString("CYCLE", (x1 + x2) / 2 - 20, controlY - 10);
     }
-    
+
     private void drawPointers(Graphics2D g) {
         if (slowPointer != null) {
             drawPointerLabel(g, slowPointer, "SLOW", new Color(0x059669), -40);
@@ -181,14 +183,14 @@ final class CycleDetectionVisual extends LinkedList{
             drawPointerLabel(g, fastPointer, "FAST", new Color(0xDC2626), -20);
         }
     }
-    
+
     private void drawPointerLabel(Graphics2D g, VisualNode node, String label, Color color, int yOffset) {
         g.setColor(color);
         g.setFont(new Font(Font.SANS_SERIF, Font.BOLD, 16));
         int x = node.xPos + nodeWidth / 2 - 20;
         int y = node.yPos + yOffset;
         g.drawString(label, x, y);
-        
+
         // Draw arrow pointing down
         g.setStroke(new BasicStroke(2f));
         g.drawLine(x + 20, y + 5, x + 20, node.yPos - 5);
@@ -196,17 +198,17 @@ final class CycleDetectionVisual extends LinkedList{
         int[] yPoints = {node.yPos - 5, node.yPos - 15, node.yPos - 15};
         g.fillPolygon(xPoints, yPoints, 3);
     }
-    
+
     private void drawResult(Graphics2D g) {
         if (!detectionResult.isEmpty()) {
             g.setFont(new Font(Font.SANS_SERIF, Font.BOLD, 24));
             FontMetrics fm = g.getFontMetrics();
             int textWidth = fm.stringWidth(detectionResult);
-            
+
             // Draw background
             g.setColor(new Color(0, 0, 0, 200));
             g.fillRoundRect(width / 2 - textWidth / 2 - 20, height - 150, textWidth + 40, 60, 15, 15);
-            
+
             // Draw text
             if (detectionResult.contains("FOUND")) {
                 g.setColor(new Color(0xFF0000));
@@ -216,16 +218,16 @@ final class CycleDetectionVisual extends LinkedList{
             g.drawString(detectionResult, width / 2 - textWidth / 2, height - 110);
         }
     }
-    
+
     public void appendNode(int value) {
         if (detectionRunning) {
             JOptionPane.showMessageDialog(this, "Wait for detection to complete!", "Info", JOptionPane.INFORMATION_MESSAGE);
             return;
         }
-        
+
         int x = nodes.isEmpty() ? 150 : nodes.get(nodes.size() - 1).xPos + nodeWidth + spacing;
         VisualNode newNode = new VisualNode(value, x, 200);
-        
+
         if (!nodes.isEmpty()) {
             VisualNode last = nodes.get(nodes.size() - 1);
             // Remove any existing cycle first
@@ -236,28 +238,14 @@ final class CycleDetectionVisual extends LinkedList{
             last.nextNode = newNode;
             last.nextAddress = newNode.address;
         }
-        
+
         nodes.add(newNode);
         animateNodeAppear(newNode);
         resize();
     }
-    
+
     private void animateNodeAppear(VisualNode node) {
-        int originalY = node.yPos;
-        node.yPos = -nodeHeight;
-        
-        Timer timer = new Timer(15, null);
-        timer.addActionListener(e -> {
-            if (node.yPos < originalY) {
-                node.yPos += 8;
-                repaint();
-            } else {
-                node.yPos = originalY;
-                timer.stop();
-                repaint();
-            }
-        });
-        timer.start();
+        insertNode(node,this);
     }
     public void createCycle(int cycleToIndex) {
         if (detectionRunning) return;
@@ -269,13 +257,13 @@ final class CycleDetectionVisual extends LinkedList{
             JOptionPane.showMessageDialog(this, "Invalid cycle index!", "Error", JOptionPane.ERROR_MESSAGE);
             return;
         }
-        
-        VisualNode last = nodes.get(nodes.size() - 1);
+
+        VisualNode last = nodes.getLast();
         last.nextNode = nodes.get(cycleToIndex);
         last.nextAddress = nodes.get(cycleToIndex).address;
         repaint();
     }
-    
+
     public void removeCycle() {
         if (detectionRunning) return;
         if (!nodes.isEmpty()) {
@@ -285,21 +273,19 @@ final class CycleDetectionVisual extends LinkedList{
         }
         repaint();
     }
-    
     public void detectCycleFloyd() {
         if (nodes.isEmpty()) return;
         if (detectionRunning) {
             JOptionPane.showMessageDialog(this, "Detection already running!", "Info", JOptionPane.INFORMATION_MESSAGE);
             return;
         }
-        
+
         detectionRunning = true;
         currentAlgorithm = "Floyd's Cycle Detection (Tortoise & Hare)";
         detectionResult = "";
         visitedNodes.clear();
-        slowPointer = nodes.get(0);
-        fastPointer = nodes.get(0);
-        
+        slowPointer = nodes.getFirst();
+        fastPointer = nodes.getFirst();
         Timer timer = new Timer(animationSpeed, null);
         timer.addActionListener(e -> {
             // Move slow pointer one step
@@ -314,7 +300,8 @@ final class CycleDetectionVisual extends LinkedList{
                 repaint();
                 return;
             }
-            
+
+
             // Move fast pointer two steps
             if (fastPointer.nextNode != null) {
                 fastPointer = fastPointer.nextNode;
@@ -338,35 +325,35 @@ final class CycleDetectionVisual extends LinkedList{
                 repaint();
                 return;
             }
-            
+
             // Check if they meet
             if (slowPointer == fastPointer) {
                 detectionResult = "CYCLE FOUND! Pointers met at node " + slowPointer.data;
                 detectionRunning = false;
                 timer.stop();
             }
-            
+
             repaint();
         });
         timer.start();
     }
-    
+
     public void detectCycleHashSet() {
         if (nodes.isEmpty()) return;
         if (detectionRunning) {
             JOptionPane.showMessageDialog(this, "Detection already running!", "Info", JOptionPane.INFORMATION_MESSAGE);
             return;
         }
-        
+
         detectionRunning = true;
         currentAlgorithm = "Hash Set Based Detection";
         detectionResult = "";
         visitedNodes.clear();
         slowPointer = null;
         fastPointer = null;
-        
+
         final VisualNode[] current = {nodes.get(0)};
-        
+
         Timer timer = new Timer(animationSpeed, null);
         timer.addActionListener(e -> {
             if (visitedNodes.contains(current[0])) {
@@ -376,9 +363,9 @@ final class CycleDetectionVisual extends LinkedList{
                 repaint();
                 return;
             }
-            
+
             visitedNodes.add(current[0]);
-            
+
             if (current[0].nextNode == null) {
                 detectionResult = "NO CYCLE FOUND";
                 detectionRunning = false;
@@ -386,30 +373,30 @@ final class CycleDetectionVisual extends LinkedList{
                 repaint();
                 return;
             }
-            
+
             current[0] = current[0].nextNode;
             repaint();
         });
         timer.start();
     }
-    
+
     public void detectCycleBrent() {
         if (nodes.isEmpty()) return;
         if (detectionRunning) {
             JOptionPane.showMessageDialog(this, "Detection already running!", "Info", JOptionPane.INFORMATION_MESSAGE);
             return;
         }
-        
+
         detectionRunning = true;
         currentAlgorithm = "Brent's Cycle Detection";
         detectionResult = "";
         visitedNodes.clear();
         slowPointer = nodes.get(0);
         fastPointer = nodes.get(0);
-        
+
         final int[] power = {1};
         final int[] lambda = {1};
-        
+
         Timer timer = new Timer(animationSpeed, null);
         timer.addActionListener(e -> {
             // Move fast pointer
@@ -424,7 +411,7 @@ final class CycleDetectionVisual extends LinkedList{
                 repaint();
                 return;
             }
-            
+
             // Check if they meet
             if (slowPointer == fastPointer) {
                 detectionResult = "CYCLE FOUND! (Brent's Algorithm) at node " + slowPointer.data;
@@ -433,20 +420,20 @@ final class CycleDetectionVisual extends LinkedList{
                 repaint();
                 return;
             }
-            
+
             // Check if power needs to be updated
             if (lambda[0] == power[0]) {
                 slowPointer = fastPointer;
                 power[0] *= 2;
                 lambda[0] = 0;
             }
-            
+
             lambda[0]++;
             repaint();
         });
         timer.start();
     }
-    
+
     public void reset() {
         detectionRunning = false;
         currentAlgorithm = "";
@@ -456,7 +443,7 @@ final class CycleDetectionVisual extends LinkedList{
         visitedNodes.clear();
         repaint();
     }
-    
+
     protected void resize() {
         if (nodes.isEmpty()) {
             dynamicWidth = width;
@@ -468,7 +455,7 @@ final class CycleDetectionVisual extends LinkedList{
         revalidate();
         repaint();
     }
-    
+
     public void setAnimationSpeed(int speed) {
         this.animationSpeed = speed;
     }
@@ -480,7 +467,7 @@ public class LinkedListCycleDetection extends JPanel implements DefaultWindowsIn
     private final JTextField valueField;
     private final JTextField cycleField;
     private final Font font = new Font(Font.SANS_SERIF, Font.BOLD, 16);
-    
+
     public LinkedListCycleDetection() {
         setLayout(new BorderLayout());
         visualPanel = new CycleDetectionVisual();
@@ -502,18 +489,18 @@ public class LinkedListCycleDetection extends JPanel implements DefaultWindowsIn
                 valueField.setText("");
             }
         });
-        
+
         nodePanel.add(valueField);
         nodePanel.add(addBtn);
-        
+
         // Cycle operations
         JPanel cyclePanel = new JPanel(new GridLayout(1, 3, 5, 5));
         cyclePanel.setBackground(new Color(0, 18, 121));
-        
+
         cycleField = createTextField("Cycle to Index");
         JButton createCycleBtn = createButton("CREATE CYCLE", new Color(0xFF6600));
         JButton removeCycleBtn = createButton("REMOVE CYCLE", Color.BLACK);
-        
+
         createCycleBtn.addActionListener(e -> {
             if (verifyInput(cycleField)) {
                 visualPanel.createCycle(Integer.parseInt(cycleField.getText()));
@@ -521,53 +508,53 @@ public class LinkedListCycleDetection extends JPanel implements DefaultWindowsIn
             }
         });
         removeCycleBtn.addActionListener(e -> visualPanel.removeCycle());
-        
+
         cyclePanel.add(cycleField);
         cyclePanel.add(createCycleBtn);
         cyclePanel.add(removeCycleBtn);
-        
+
         // Detection buttons
         JPanel detectionPanel = new JPanel(new GridLayout(1, 4, 5, 5));
         detectionPanel.setBackground(new Color(0, 18, 121));
-        
+
         JButton floydBtn = createButton("FLOYD'S ALGORITHM", new Color(0, 100, 0));
         JButton brentBtn = createButton("BRENT'S ALGORITHM", new Color(0, 80, 120));
         JButton hashSetBtn = createButton("HASHSET METHOD", new Color(0, 0, 139));
         JButton resetBtn = createButton("RESET", new Color(139, 0, 0));
-        
+
         floydBtn.addActionListener(e -> visualPanel.detectCycleFloyd());
         brentBtn.addActionListener(e -> visualPanel.detectCycleBrent());
         hashSetBtn.addActionListener(e -> visualPanel.detectCycleHashSet());
         resetBtn.addActionListener(e -> visualPanel.reset());
-        
+
         detectionPanel.add(floydBtn);
         detectionPanel.add(brentBtn);
         detectionPanel.add(hashSetBtn);
         detectionPanel.add(resetBtn);
-        
+
         // Speed control
         JPanel speedPanel = new JPanel(new BorderLayout());
         speedPanel.setBackground(new Color(0, 18, 121));
         JLabel speedLabel = new JLabel("Animation Speed", SwingConstants.CENTER);
         speedLabel.setForeground(Color.WHITE);
         speedLabel.setFont(font);
-        
+
         JSlider speedSlider = new JSlider(200, 1000, 500);
         speedSlider.setBackground(new Color(0, 18, 121));
         speedSlider.setForeground(Color.WHITE);
         speedSlider.addChangeListener(e -> visualPanel.setAnimationSpeed(speedSlider.getValue()));
-        
+
         speedPanel.add(speedLabel, BorderLayout.NORTH);
         speedPanel.add(speedSlider, BorderLayout.CENTER);
-        
+
         controlPanel.add(nodePanel);
         controlPanel.add(cyclePanel);
         controlPanel.add(detectionPanel);
         controlPanel.add(speedPanel);
-        
+
         add(scrollPane, BorderLayout.CENTER);
         add(controlPanel, BorderLayout.SOUTH);
-        
+
         // Key listener
         valueField.addKeyListener(new KeyListener() {
             @Override
@@ -577,23 +564,23 @@ public class LinkedListCycleDetection extends JPanel implements DefaultWindowsIn
                     valueField.setText("");
                 }
             }
-            
+
             @Override
             public void keyPressed(KeyEvent e) {}
-            
+
             @Override
             public void keyReleased(KeyEvent e) {}
         });
     }
-    
+
     private JTextField createTextField(String tooltip) {
         return ComponentUtilities.createTextField(font, backgroundColor,tooltip);
     }
-    
+
     private JButton createButton(String text, Color bgColor) {
         return ComponentUtilities.createButton(text, bgColor, font);
     }
-    
+
     private boolean verifyInput(JTextField field) {
         return field.getInputVerifier().verify(field);
     }
